load_test_out.log
/home/runner/work/hub-perf-test/hub-perf-test/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
sdk_load_test/transfer.ts(1,24): error TS2307: Cannot find module 'ethers' or its corresponding type declarations.

    at createTSError (/home/runner/work/hub-perf-test/hub-perf-test/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/runner/work/hub-perf-test/hub-perf-test/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/runner/work/hub-perf-test/hub-perf-test/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/runner/work/hub-perf-test/hub-perf-test/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/runner/work/hub-perf-test/hub-perf-test/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1426:10)
    at Object.require.extensions.<computed> [as .ts] (/home/runner/work/hub-perf-test/hub-perf-test/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1205:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1021:12)
    at Module.require (node:internal/modules/cjs/loader:1230:19) {
  diagnosticCodes: [ 2307 ]
}
